--- a/Assistente_de_Voz_Multi_Idiomas_com_Whisper_e_Chat_GPT_BRADESCO_SAÚDE_em_dia.ipynb
+++ b/Assistente_de_Voz_Multi_Idiomas_com_Whisper_e_Chat_GPT_BRADESCO_SAÚDE_em_dia.ipynb
@@ -16,7 +16,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "dd22058908554e3c8279fa7bc6fe06c4": {
+        "4aa1cf9e43344467890f4612570acfe0": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -31,14 +31,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_11968e68d8da4f48ac1adfe1640313f5",
-              "IPY_MODEL_0e848197365941e285b7d1e5b1c05667",
-              "IPY_MODEL_42cd4ca7a7444ccbbdc297b142921d48"
+              "IPY_MODEL_bf34c8b105794a97b9e7b6590fa102d4",
+              "IPY_MODEL_ff42e619bc014e6a82a4cea865eacfe6",
+              "IPY_MODEL_0717aabcbec94a29a604424da1eefd57"
             ],
-            "layout": "IPY_MODEL_8cce93bc270e469195c91e32b05a3778"
+            "layout": "IPY_MODEL_3d83fb3a78734932b183f3ebfd844414"
           }
         },
-        "11968e68d8da4f48ac1adfe1640313f5": {
+        "bf34c8b105794a97b9e7b6590fa102d4": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -53,13 +53,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_8b400e298a5146e589c65087c5a67497",
+            "layout": "IPY_MODEL_71fa3ae710c74758ab3cbdf76bdbeab6",
             "placeholder": "​",
-            "style": "IPY_MODEL_2bf1c66899754af5874575087ddcd4fd",
+            "style": "IPY_MODEL_edd1eca265aa48efb3dadd4de4d1e1e4",
             "value": "Loading weights: 100%"
           }
         },
-        "0e848197365941e285b7d1e5b1c05667": {
+        "ff42e619bc014e6a82a4cea865eacfe6": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -75,15 +75,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_6a3f591263de47a2b20c9f7637a795bb",
+            "layout": "IPY_MODEL_de5cfa87b3be4df6bd6da4fbec95fb64",
             "max": 282,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_1550a0562d9741149283022db370f85c",
+            "style": "IPY_MODEL_3b254fc30e0146deb1eafc0babec13ee",
             "value": 282
           }
         },
-        "42cd4ca7a7444ccbbdc297b142921d48": {
+        "0717aabcbec94a29a604424da1eefd57": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -98,13 +98,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_1c1389db0a1e4504ab564fcddf71d342",
+            "layout": "IPY_MODEL_197c0af0421a4ded86b13ee3b2979a1a",
             "placeholder": "​",
-            "style": "IPY_MODEL_fafbea2c776c4a85a28f0eff9a365b67",
-            "value": " 282/282 [00:00&lt;00:00, 509.80it/s, Materializing param=shared.weight]"
+            "style": "IPY_MODEL_66d80512acf04db9b4e0a1b026cc8125",
+            "value": " 282/282 [00:00&lt;00:00, 569.50it/s, Materializing param=shared.weight]"
           }
         },
-        "8cce93bc270e469195c91e32b05a3778": {
+        "3d83fb3a78734932b183f3ebfd844414": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -156,7 +156,7 @@
             "width": null
           }
         },
-        "8b400e298a5146e589c65087c5a67497": {
+        "71fa3ae710c74758ab3cbdf76bdbeab6": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -208,7 +208,7 @@
             "width": null
           }
         },
-        "2bf1c66899754af5874575087ddcd4fd": {
+        "edd1eca265aa48efb3dadd4de4d1e1e4": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -223,7 +223,7 @@
             "description_width": ""
           }
         },
-        "6a3f591263de47a2b20c9f7637a795bb": {
+        "de5cfa87b3be4df6bd6da4fbec95fb64": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -275,7 +275,7 @@
             "width": null
           }
         },
-        "1550a0562d9741149283022db370f85c": {
+        "3b254fc30e0146deb1eafc0babec13ee": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -291,7 +291,7 @@
             "description_width": ""
           }
         },
-        "1c1389db0a1e4504ab564fcddf71d342": {
+        "197c0af0421a4ded86b13ee3b2979a1a": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -343,7 +343,7 @@
             "width": null
           }
         },
-        "fafbea2c776c4a85a28f0eff9a365b67": {
+        "66d80512acf04db9b4e0a1b026cc8125": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -380,7 +380,7 @@
       "metadata": {
         "id": "nvvYFFNaf12H"
       },
-      "execution_count": 154,
+      "execution_count": 171,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
       "metadata": {
         "id": "WBLXxra7kLNy"
       },
-      "execution_count": 155,
+      "execution_count": 172,
       "outputs": []
     },
     {
@@ -430,7 +430,7 @@
       "metadata": {
         "id": "iIHoTntTkgqp"
       },
-      "execution_count": 156,
+      "execution_count": 173,
       "outputs": []
     },
     {
@@ -479,7 +479,7 @@
       "metadata": {
         "id": "-t8Bpkimk-1a"
       },
-      "execution_count": 157,
+      "execution_count": 174,
       "outputs": []
     },
     {
@@ -506,7 +506,7 @@
       "metadata": {
         "id": "1mbSS3yplNDA"
       },
-      "execution_count": 158,
+      "execution_count": 175,
       "outputs": []
     },
     {
@@ -533,7 +533,7 @@
       "metadata": {
         "id": "pKF2FG15lesQ"
       },
-      "execution_count": 159,
+      "execution_count": 176,
       "outputs": []
     },
     {
@@ -553,7 +553,7 @@
       "metadata": {
         "id": "mrVHQnf4-yGp"
       },
-      "execution_count": 160,
+      "execution_count": 177,
       "outputs": []
     },
     {
@@ -597,26 +597,34 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 104,
+          "height": 138,
           "referenced_widgets": [
-            "dd22058908554e3c8279fa7bc6fe06c4",
-            "11968e68d8da4f48ac1adfe1640313f5",
-            "0e848197365941e285b7d1e5b1c05667",
-            "42cd4ca7a7444ccbbdc297b142921d48",
-            "8cce93bc270e469195c91e32b05a3778",
-            "8b400e298a5146e589c65087c5a67497",
-            "2bf1c66899754af5874575087ddcd4fd",
-            "6a3f591263de47a2b20c9f7637a795bb",
-            "1550a0562d9741149283022db370f85c",
-            "1c1389db0a1e4504ab564fcddf71d342",
-            "fafbea2c776c4a85a28f0eff9a365b67"
+            "4aa1cf9e43344467890f4612570acfe0",
+            "bf34c8b105794a97b9e7b6590fa102d4",
+            "ff42e619bc014e6a82a4cea865eacfe6",
+            "0717aabcbec94a29a604424da1eefd57",
+            "3d83fb3a78734932b183f3ebfd844414",
+            "71fa3ae710c74758ab3cbdf76bdbeab6",
+            "edd1eca265aa48efb3dadd4de4d1e1e4",
+            "de5cfa87b3be4df6bd6da4fbec95fb64",
+            "3b254fc30e0146deb1eafc0babec13ee",
+            "197c0af0421a4ded86b13ee3b2979a1a",
+            "66d80512acf04db9b4e0a1b026cc8125"
           ]
         },
         "id": "RHn8QA16lq65",
-        "outputId": "fdf34cdc-d3f7-4d9f-ee5d-2c0894b31e5f"
+        "outputId": "f35334da-0e8c-4691-a9f3-7d53397497ed"
       },
-      "execution_count": 161,
+      "execution_count": 178,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Warning: You are sending unauthenticated requests to the HF Hub. Please set a HF_TOKEN to enable higher rate limits and faster downloads.\n",
+            "WARNING:huggingface_hub.utils._http:Warning: You are sending unauthenticated requests to the HF Hub. Please set a HF_TOKEN to enable higher rate limits and faster downloads.\n"
+          ]
+        },
         {
           "output_type": "display_data",
           "data": {
@@ -626,7 +634,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "dd22058908554e3c8279fa7bc6fe06c4"
+              "model_id": "4aa1cf9e43344467890f4612570acfe0"
             }
           },
           "metadata": {}
@@ -670,7 +678,7 @@
       "metadata": {
         "id": "_T7rDAnEl4oJ"
       },
-      "execution_count": 162,
+      "execution_count": 179,
       "outputs": []
     },
     {
@@ -697,7 +705,7 @@
       "metadata": {
         "id": "zB1A-FRrmE2N"
       },
-      "execution_count": 163,
+      "execution_count": 180,
       "outputs": []
     },
     {
@@ -758,7 +766,7 @@
       "metadata": {
         "id": "lBBSHbF-xnP7"
       },
-      "execution_count": 164,
+      "execution_count": 181,
       "outputs": []
     },
     {
@@ -781,9 +789,9 @@
           "height": 318
         },
         "id": "qnC7FcLa0ofe",
-        "outputId": "687433bf-d95a-4439-e7b4-394e5b10035f"
+        "outputId": "3e8c634f-3168-40c6-ebe9-0aecef41a236"
       },
-      "execution_count": 170,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "stream",
@@ -798,7 +806,7 @@
             "Quantas horas dormiu? 9\n",
             "De 1 a 5, qual seu estresse? 1\n",
             "Fez atividade física? (sim/nao) sim\n",
-            "Qual seu peso? 55\n",
+            "Qual seu peso? 56\n",
             "\n",
             "📊 Score: 8\n",
             "Classificação: Baixo risco\n",
